@@ -1093,7 +1093,14 @@ void unit_type::add_advancement(const unit_type &to_unit,int xp)
 
 	// Add extra advancement path to this unit type
 	lg::info(lg::config) << "adding advancement from " << from_id << " to " << to_id << "\n";
-	advances_to_.push_back(to_id);
+	if(std::find(advances_to_.begin(), advances_to_.end(), to_id) == advances_to_.end()) {
+		advances_to_.push_back(to_id);
+	} else {
+		lg::info(lg::config) << "advancement from " << from_id
+		                     << " to " << to_id << " already known, ignoring.\n";
+		return;
+	}
+	
 	if(xp>0 && experience_needed_>xp) experience_needed_=xp;
 
 	// Add advancements to gendered subtypes, if supported by to_unit
